fixed button going off screen and added diffrent responses based on no button hover counter

--- a/Moving_Button/Moving_Button_Style.css
+++ b/Moving_Button/Moving_Button_Style.css
@@ -7,7 +7,7 @@
 {
     margin: 0;
     padding: 0;
-    /* border: black 0.1rem solid; */
+    border: black 0.1rem solid;
 }
 
 body
@@ -80,14 +80,20 @@ html
 
 #question-app
 {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 700px;
     width: 1000px;
     border: black 0.4rem solid;
     border-radius: 2rem;
-    justify-content: center;
     align-items: center;
+}
+
+#question
+{
+    position: absolute;
+    margin-top: 7rem;
 }
 
 .btn
@@ -114,16 +120,28 @@ html
 {
     position: relative;
     display: flex;
-    margin-top: 10rem;
     gap: 2rem;
+    width: 100%;
+    height: inherit;
+    justify-content: center;
+
 }
 
 #no-btn
 {
     position: absolute;
+    top: 27rem;
 }
 
 h2
 {
     font-size: 4rem;
+}
+
+.test
+{
+    position: absolute;
+    border: black 0.1rem solid;
+    height: 700px;
+    width: 1000px;
 }
